--- a/demo/App2/entry/src/main/module.json5
+++ b/demo/App2/entry/src/main/module.json5
@@ -32,6 +32,20 @@
           }
         ]
       }
+    ],
+    "requestPermissions": [
+      {
+        "name": "ohos.permission.INTERNET",
+        "usedScene": {
+          "when": "always"
+        }
+      },
+      {
+        "name": "ohos.permission.PUBLISH_AGENT_REMINDER",
+        "usedScene": {
+          "when": "always"
+        }
+      }
     ]
   }
 }
